--- a/main.html
+++ b/main.html
@@ -1,105 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Take Care of Texas Chatbot</title>
-  <style>
-    body {
-      font-family: Arial;
-      background: #8fd3f4;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .chatbox {
-      width: 420px;
-      background: white;
-      border-radius: 22px;
-      border: 3px solid black;
-      padding: 20px;
-      box-shadow: 0 0 14px rgba(0,0,0,0.3);
-      display: flex;
-      flex-direction: column;
-    }
-    .messages {
-      height: 300px;
-      overflow-y: auto;
-      border: 2px solid black;
-      border-radius: 12px;
-      padding: 10px;
-      background: #f7f7f7;
-      margin-bottom: 15px;
-    }
-    .bubble {
-      padding: 8px 12px;
-      background: #e0f7ff;
-      border: 1px solid #a7dfee;
-      border-radius: 12px;
-      margin: 8px 0;
-    }
-    .inputRow {
-      display: flex;
-      gap: 8px;
-    }
-    input {
-      flex: 1;
-      padding: 10px;
-      border: 2px solid black;
-      border-radius: 10px;
-    }
-    button {
-      padding: 10px 14px;
-      background: #0aa399;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Take Care of Texas Chatbot</title>
+<style>
+body {
+  font-family: Arial;
+  background: #8fd3f4;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.chatbox {
+  width: 420px;
+  background: white;
+  border-radius: 22px;
+  border: 3px solid black;
+  padding: 20px;
+  box-shadow: 0 0 14px rgba(0,0,0,0.3);
+  display: flex;
+  flex-direction: column;
+}
+.chatbox h2 {
+  text-align: center;
+}
+.messages {
+  height: 300px;
+  overflow-y: auto;
+  border: 2px solid black;
+  border-radius: 12px;
+  padding: 10px;
+  background: #f7f7f7;
+  margin-bottom: 15px;
+}
+.bubble {
+  padding: 8px 12px;
+  background: #e0f7ff;
+  border: 1px solid #a7dfee;
+  border-radius: 12px;
+  margin: 8px 0;
+}
+.inputRow {
+  display: flex;
+  gap: 8px;
+}
+input {
+  flex: 1;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 10px;
+}
+button {
+  padding: 10px 14px;
+  background: #0aa399;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+</style>
 </head>
 <body>
 
 <div class="chatbox">
-  <h2 style="text-align:center">Take Care of Texas</h2>
-
+  <h2>Take Care of Texas</h2>
   <div class="messages" id="messages"></div>
-
   <div class="inputRow">
-    <input id="userInput" placeholder="Type here" />
+    <input id="userInput" placeholder="Type here">
     <button onclick="sendMessage()">Send</button>
   </div>
 </div>
 
 <script src="responses.js"></script>
 <script>
-  const box = document.getElementById('messages');
-  const input = document.getElementById('userInput');
+const box = document.getElementById('messages');
+const input = document.getElementById('userInput');
 
-  function addMessage(text) {
-    const d = document.createElement('div');
-    d.className = 'bubble';
-    d.textContent = text;
-    box.appendChild(d);
-    box.scrollTop = box.scrollHeight;
-  }
+function addMessage(text) {
+  const d = document.createElement('div');
+  d.className = 'bubble';
+  d.textContent = text;
+  box.appendChild(d);
+  box.scrollTop = box.scrollHeight;
+}
 
-  function sendMessage() {
-    const t = input.value.trim();
-    if (!t) return;
-    addMessage("You said " + t);
-    input.value = "";
-    respond(t);
-  }
+function sendMessage() {
+  const t = input.value.trim();
+  if (!t) return;
+  addMessage("You said " + t);
+  input.value = "";
+  respond(t);
+}
 
-  function respond(text) {
-    const r = texasResponses[Math.floor(Math.random() * texasResponses.length)];
-    const s = texasSuggestions[Math.floor(Math.random() * texasSuggestions.length)];
-    addMessage(r);
-    addMessage(s);
-  }
+function respond(text) {
+  const r = texasResponses[Math.floor(Math.random() * texasResponses.length)];
+  const s = texasSuggestions[Math.floor(Math.random() * texasSuggestions.length)];
+  addMessage(r);
+  addMessage(s);
+}
+
+// Optional: trigger welcome message
+addMessage("Howdy! Type anything or click send to learn how to take care of Texas");
 </script>
 
 </body>
