--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
   color: #00332f;
 }
 #chatContainer {
-  width: 480px;
+  width: 500px;
   max-width: 90%;
   background: white;
   border-radius: 25px;
@@ -25,6 +25,7 @@ body {
   flex-direction: column;
   overflow: hidden;
   border: 3px solid #064f4a;
+  position: relative;
 }
 #header {
   background: #0d726b;
@@ -33,6 +34,21 @@ body {
   font-size: 1.4rem;
   text-align: center;
   font-weight: bold;
+  position: relative;
+}
+#header img.left {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 50px;
+  height: 50px;
+}
+#header img.right {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 50px;
+  height: 50px;
 }
 #chatBox {
   flex: 1;
@@ -42,6 +58,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  position: relative;
 }
 .userBubble {
   align-self: flex-end;
@@ -66,6 +83,8 @@ body {
   border-top: 2px solid #b6f1ec;
   background: #e3fffc;
   gap: 10px;
+  flex-wrap: wrap;
+  position: relative;
 }
 #inputArea input {
   flex: 1;
@@ -88,21 +107,45 @@ body {
   background: #0d726b;
   transform: scale(1.05);
 }
+#suggestions {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-top: 5px;
+}
+#suggestions button {
+  padding: 6px 12px;
+  border-radius: 10px;
+  border: 1px solid #0aa399;
+  background: #c0f7f3;
+  cursor: pointer;
+  transition: 0.2s;
+}
+#suggestions button:hover {
+  background: #0aa399;
+  color: white;
+}
 </style>
 </head>
 <body>
 <div id="chatContainer">
-  <div id="header">Take Care of Texas</div>
+  <div id="header">
+    <img src="images/texasheart.png" class="left" alt="Texas Heart" />
+    <img src="images/texassmile.png" class="right" alt="Texas Smile" />
+    Take Care of Texas
+  </div>
   <div id="chatBox"></div>
   <div id="inputArea">
     <input type="text" id="userInput" placeholder="Type your message here" />
     <button onclick="sendMessage()">Send</button>
+    <div id="suggestions"></div>
   </div>
 </div>
 <script src="responses.js"></script>
 <script>
 const chatBox = document.getElementById('chatBox');
 const input = document.getElementById('userInput');
+const suggestionsDiv = document.getElementById('suggestions');
 
 function addMessage(role, text) {
   const div = document.createElement('div');
@@ -118,12 +161,33 @@ function sendMessage() {
   addMessage('user', message);
   input.value = '';
   const response = getResponse(message);
-  setTimeout(() => addMessage('ai', response), 400);
+  setTimeout(() => {
+    addMessage('ai', response);
+    showSuggestions();
+  }, 400);
+}
+
+function showSuggestions() {
+  suggestionsDiv.innerHTML = '';
+  const picks = texasSuggestions.slice(0, 8);
+  picks.forEach(p => {
+    const btn = document.createElement('button');
+    btn.textContent = p;
+    btn.onclick = () => {
+      input.value = p;
+      sendMessage();
+    };
+    suggestionsDiv.appendChild(btn);
+  });
 }
 
 input.addEventListener('keypress', function(e) {
   if(e.key === 'Enter') sendMessage();
 });
+
+// Start conversation with AI greeting
+addMessage('ai', 'Howdy partner I am your Texas Care Bot Ready to share tips and suggestions to take care of Texas');
+showSuggestions();
 </script>
 </body>
 </html>
